[package]
name = "wallet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = '../common'}
logging = { path = "../logging" }
serialization = { path = "../serialization" }
utxo = { path = '../utxo' }
wallet-storage = {path = './storage'}
wallet-types = {path = './types'}

thiserror.workspace = true